/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto3";

package org.apache.druid.query.aggregation.variablewidthhistogram.proto;

option java_package = "org.apache.druid.query.aggregation.variablewidthhistogram.proto";
option java_outer_classname = "VariableWidthHistogramProto";

message VariableWidthHistogram {
  int32 num_buckets = 1;
  int32 max_num_buckets = 2;
  repeated double boundaries = 3;
  repeated double counts = 4;
  int64 missing_value_count = 5;
  double count = 6;
  optional double max = 7;
  optional double min = 8;
}

